# claude-code-cli-runner

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
claude_code_cli_runner/: __init__.py  __main__.py  auth_status.py  claude_session_store.py  content.py  http_server.py  live_files.py  request.py  result.py  runner.py  session_registry.py  transports.py
examples/: run_local_text.py  run_multimodal.py
tests/: conftest.py  stub_streaming_claude.py  test_auth_status.py  test_control_channel.py  test_http_control.py  test_http_face.py  test_live_file_contract.py  test_multimodal_input.py  test_multimodal_output.py  test_permission_protocol.py  test_permission_roundtrip.py  test_session_reuse.py  test_text_run.py  test_transports.py
